chore(workspace): ts configuration compatible with monorepo setup

--- a/platforms/storybook/package.json
+++ b/platforms/storybook/package.json
@@ -10,8 +10,8 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "start": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": [
