--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -40,9 +40,13 @@
     "tweetnacl": "^0.14.5"
   },
   "devDependencies": {
+    "@types/eslint": "^8",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.36",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
     "ts-node": "^10.8.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
