--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.24.0",
     "cross-fetch": "^3.1.5",
     "debug": "^4.3.4",
+    "food-words": "^1.1.0",
     "fp-ts": "^2.11.9",
     "geoip-lite": "^1.4.4",
     "io-ts": "^2.2.16",
