chore(storybook): ts config for png resolution

--- a/platforms/storybook/tsconfig.json
+++ b/platforms/storybook/tsconfig.json
@@ -30,6 +30,6 @@
       "path": "../../packages/shared"
     }
   ],
-  "include": ["./src"],
+  "include": ["./src", "./typings"],
   "exclude": ["node_modules", "public", ".storybook", ".cache"]
 }
