build(workspace): missing deps to build yt:backend in docker

--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -38,9 +38,11 @@
     "fetch-opengraph": "^1.0.35",
     "food-words": "^1.1.0",
     "fp-ts": "^2.11.9",
+    "geoip-lite": "^1.4.6",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "jsdom": "^16.7.0",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "mongodb": "^4.3.1",
     "nacl-signature": "^1.0.0",
@@ -48,6 +50,7 @@
     "node-fetch": "^2.6.7",
     "numeral": "^2.0.6",
     "ts-endpoint": "^2.0.0",
+    "ts-endpoint-express": "^2.0.0",
     "ts-io-error": "^2.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -56,8 +59,10 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
+    "@types/geoip-lite": "^1",
     "@types/jest": "^27.5.2",
     "@types/jsdom": "^16.2.14",
+    "@types/module-alias": "^2",
     "@types/nconf": "^0.10.2",
     "@types/node": "^16.11.68",
     "@types/supertest": "^2.0.12",
@@ -74,6 +79,8 @@
     "prettier": "^2.7.1",
     "supertest": "^6.2.4",
     "ts-jest": "^27.1.5",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
   }
