--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "copy-webpack-plugin": "^11.0.0",
+    "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
