--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf ./build",
-    "build": "tsc -b",
+    "build": "tsc -b tsconfig.build.json",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
     "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
     "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node bin/server",
