--- a/platforms/yttrex/backend/tsconfig.build.json
+++ b/platforms/yttrex/backend/tsconfig.build.json
@@ -5,7 +5,8 @@
     "strict": false,
     "rootDir": "./",
     "baseUrl": "./",
-    "noEmit": true,
+    "outDir": "./build",
+    "noEmit": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
