--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -7,17 +7,17 @@
     "clean": "rm -rf ./build",
     "build": "tsc -b tsconfig.build.json",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server",
-    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node bin/server",
-    "parserv": "DEBUG=\"*,-@trex:htmls:debug,-pubtimeAPI\" ts-node bin/parser.ts",
-    "parserv:watch": "DEBUG=\"*,-@trex:htmls:debug\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser.ts",
-    "leaveserv": "DEBUG=\"*\" ts-node bin/leaves-parser.ts",
+    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" node build/bin/server",
+    "parserv": "DEBUG=\"*,-@trex:htmls:debug,-pubtimeAPI\" node build/bin/parser",
+    "parserv:watch": "DEBUG=\"*,-@trex:htmls:debug\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser",
+    "leaveserv": "DEBUG=\"*\" node build/bin/leaves-parser.js",
     "leaveserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
     "lint": "eslint ./bin ./lib ./models ./routes",
-    "open-doc-api": "ts-node bin/open-doc-api.ts"
+    "open-doc-api": "ts-node bin/open-doc-api.ts",
+    "old_start_old": "log=$(bash -c 'git log -30 --stat --oneline --decorate --graph') DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" ts-node -r tsconfig-paths/register bin/server"
   },
   "author": "Claudio Agosti <claudio@tracking.exposed> and https://github.com/tracking-exposed/yttrex/graphs/contributors",
   "license": "AGPL-3.0",
@@ -83,5 +83,9 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4"
+  },
+  "_moduleAliases": {
+    "@shared": "../../../packages/shared/build",
+    "@yttrex/shared": "../shared/build"
   }
 }
