build(workspace): upgrade eslint@^8.25.0
@typescript-eslint-eslint-plugin@^5.40.0
@typescript-eslint-parser@^5.40.0
eslint@^8.25.0
eslint-plugin-promise@^6.1.0
eslint-plugin-react@^7.31.10

--- a/platforms/yttrex/shared/package.json
+++ b/platforms/yttrex/shared/package.json
@@ -27,14 +27,15 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.36",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^6.1.0",
     "jest": "^27.5.1",
     "prettier": "^2.7.1",
     "ts-jest": "^27.1.5",
