build(workspace): upgrade jquery@^3.6.1

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -12,17 +12,21 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@types/geoip-lite": "^1.4.1",
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
     "cross-fetch": "^3.1.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
     "food-words": "^1.1.0",
     "fp-ts": "^2.11.9",
     "geoip-lite": "^1.4.4",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
+    "jquery": "^3.6.1",
+    "lodash": "^4.17.21",
     "nconf": "^0.11.3",
     "puppeteer-core": "^13.7.0",
     "puppeteer-extra": "^3.3.4",
@@ -42,6 +46,8 @@
     "@types/chrome": "^0.0.188",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.186",
     "@types/nconf": "^0.10.2",
     "@types/node": "^16.11.36",
     "@types/react": "^17.0.50",
