--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,6 +19,7 @@
     "cross-fetch": "^3.1.5",
     "csv-parse": "^4.16.3",
     "csv-stringify": "^6.0.5",
+    "date-fns": "^2.28.0",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "food-words": "^1.1.0",
@@ -53,6 +54,7 @@
     "@types/node": "^16.11.68",
     "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
+    "@types/uuid": "^8.3.4",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
