--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -8,12 +8,12 @@
     "test": "jest",
     "coc": "DEBUG=* ts-node bin/count-o-clock.js",
     "tto:watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/observatory",
-    "tto:start": "DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node bin/observatory",
+    "tto:start": "DEBUG=\"*,-express:*,-body-parser:*,-send\" node build/bin/observatory",
     "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:cache,-send\" ts-node bin/server",
-    "parserv": "DEBUG=\"*,-@trex:htmls:debug\" ts-node bin/parser",
+    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:cache,-send\" node build/bin/server",
     "parserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register bin/parser",
-    "build": "tsc -b"
+    "parserv": "DEBUG=\"*,-@trex:htmls:debug\" node build/bin/parser",
+    "build": "tsc -b tsconfig.build.json"
   },
   "author": "https://github.com/tracking-exposed/tktrex/graphs/contributors",
   "repository": {
@@ -26,22 +26,32 @@
     "bs58": "^4.0.1",
     "cookie": "^0.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "debug": "^4.3.4",
     "express": "^4.17.2",
     "food-words": "^1.1.0",
+    "fp-ts": "^2.11.9",
+    "geoip-lite": "^1.4.6",
+    "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.19",
     "lodash": "^4.17.21",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "mongodb": "^4.3.1",
     "nacl-signature": "^1.0.0",
     "nconf": "^0.11.3",
     "node-fetch": "^2.6.7",
     "nodemon": "^1.19.4",
+    "ts-endpoint": "^2.0.0",
     "tweetnacl": "^0.14.5"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/eslint": "^8",
     "@types/express": "^4.17.13",
+    "@types/geoip-lite": "^1.4.1",
     "@types/lodash": "^4.14.186",
+    "@types/module-alias": "^2",
     "@types/node": "^16.11.68",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
@@ -49,5 +59,9 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "_moduleAliases": {
+    "@shared": "../../../packages/shared/build",
+    "@tktrex/shared": "../shared/build"
   }
 }
