--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -17,6 +17,8 @@
     "avenger": "^7.0.1",
     "axios": "^0.24.0",
     "cross-fetch": "^3.1.5",
+    "csv-parse": "^4.16.3",
+    "csv-stringify": "^6.0.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "food-words": "^1.1.0",
@@ -45,6 +47,7 @@
     "@types/chrome": "^0.0.188",
     "@types/debug": "^4.1.7",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/express": "^4.17.14",
     "@types/geoip-lite": "^1.4.1",
     "@types/jquery": "^3.5.14",
     "@types/lodash": "^4.14.186",
@@ -56,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "copy-webpack-plugin": "^11.0.0",
+    "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
@@ -69,6 +73,7 @@
     "filemanager-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
+    "jest-chrome": "^0.7.2",
     "jest-fetch-mock": "^3.0.3",
     "mini-css-extract-plugin": "^2.6.1",
     "node-loader": "^2.0.0",
