--- a/platforms/tktrex/shared/tsconfig.json
+++ b/platforms/tktrex/shared/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./build",
+    "tsBuildInfoFile": "./build/.tsbuildinfo",
     "resolveJsonModule": true,
     "strict": true,
     "skipLibCheck": true,
