ci: build both yt:backend and tk:backend with docker as CI step

--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -15,6 +15,9 @@ on:
       - "packages/**"
       - "platforms/tktrex/**"
 
+env:
+  TK_IMAGE_NAME: tk-backend
+
 jobs:
   pull_request:
     runs-on: ubuntu-latest
@@ -65,3 +68,12 @@ jobs:
           yarn pm2 start platforms/tktrex/backend/ecosystem.config.js --env test
           yarn tk:backend test --runInBand --ci --forceExit
           yarn pm2 stop all
+
+      - name: Log in to registry
+        # This is where you will update the personal access token to GITHUB_TOKEN
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
+      - name: Build TK Backend image
+        run: docker build . --file Dockerfile.tkbackend --tag $TK_IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+
+
