--- a/.github/workflows/master_release.yml
+++ b/.github/workflows/master_release.yml
@@ -9,7 +9,6 @@ permissions:
   contents: write
 
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -154,6 +153,21 @@ jobs:
           git config --global user.email "team@tracking.exposed"
           git config --global user.name "Team - Tracking Exposed"
           yarn release-it --ci
+
+      # - name: Push image
+      #   run: |
+      #     IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$YT_IMAGE_NAME
+
+      #     # Strip git ref prefix from version
+      #     VERSION=$(yarn release-it --no-github.release --release-version)
+      #     # Strip "v" prefix from tag name
+      #     [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+      #     # Use Docker `latest` tag convention
+      #     [ "$VERSION" == "master" ] && VERSION=latest
+      #     echo IMAGE_ID=$IMAGE_ID
+      #     echo VERSION=$VERSION
+      #     docker tag $YT_IMAGE_NAME $IMAGE_ID:$VERSION
+      #     docker push $IMAGE_ID:$VERSION
 
       - name: Build Dashboard
         env:
