--- a/platforms/storybook/package.json
+++ b/platforms/storybook/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@react-theming/storybook-addon": "^1.1.7",
     "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-controls": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
     "@storybook/addon-links": "^6.5.13",
