fix(tk:backend): backnamed emails2 to emails, fixed index, added an index

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -5,7 +5,7 @@
     "htmls": "htmls",
     "metadata": "metadata",
     "full": "full",
-    "emails": "emails2",
+    "emails": "emails",
     "experiments": "experiments2"
   },
 
