feat(storybook): providing global theme from previewjs

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/react": "^17"
   },
   "dependencies": {
+    "@react-theming/storybook-addon": "^1.1.7",
     "pm2": "^5.2.2"
   }
 }
