feat(tk:backend): validate and save contribution events of type 'api'

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -6,7 +6,8 @@
     "metadata": "metadata",
     "full": "full",
     "emails": "emails",
-    "experiments": "experiments"
+    "experiments": "experiments",
+    "apiRequests": "apiRequests"
   },
 
   "mongoHost": "localhost",
