--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -22,6 +22,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "bs58": "^4.0.1",
     "cookie": "^0.3.1",
@@ -34,6 +35,7 @@
     "geoip-lite": "^1.4.6",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.19",
+    "jsdom": "^16.7.0",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.2",
     "moment": "^2.29.4",
@@ -50,6 +52,7 @@
     "@types/eslint": "^8",
     "@types/express": "^4.17.13",
     "@types/geoip-lite": "^1.4.1",
+    "@types/jsdom": "^16",
     "@types/lodash": "^4.14.186",
     "@types/module-alias": "^2",
     "@types/node": "^16.11.68",
