--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -12,8 +12,8 @@ on:
       - fix/**
       - refactor/**
     paths:
-      - "packages/**"
-      - "platforms/tktrex/**"
+      - 'packages/**'
+      - 'platforms/tktrex/**'
 
 jobs:
   pull_request:
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
           cache-dependency-path: yarn.lock
 
       - name: Install modules
@@ -60,8 +60,13 @@ jobs:
       - name: Spec tests
         run: yarn tk:ext test --runInBand --ci
 
-      - name: Test platform
+      - name: Start pm2
         run: |
           yarn pm2 start platforms/tktrex/backend/ecosystem.config.js --env test
-          yarn tk:backend test --runInBand --ci --forceExit
-          yarn pm2 stop all
+          sleep 5
+
+      - name: Test platform
+        run: yarn tk:backend test --runInBand --ci --forceExit
+
+      - name: Stop pm2
+        run: yarn pm2 stop all
