--- a/.github/workflows/yttrex_pull_request.yml
+++ b/.github/workflows/yttrex_pull_request.yml
@@ -12,8 +12,8 @@ on:
       - fix/**
       - refactor/**
     paths:
-      - "shared/**"
-      - "platforms/yttrex/**"
+      - 'shared/**'
+      - 'platforms/yttrex/**'
 
 jobs:
   pull_request:
@@ -35,7 +35,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "yarn"
+          cache: 'yarn'
           cache-dependency-path: yarn.lock
 
       - name: Install modules
@@ -65,9 +65,13 @@ jobs:
       - name: Test Extension
         run: yarn yt:ext test --runInBand --ci
 
-      - name: Test backend
+      - name: Start pm2
         run: |
           yarn pm2 start platforms/yttrex/backend/ecosystem.config.js  --env test
-          yarn yt:backend test --runInBand --forceExit --ci
-          yarn pm2 stop all
+          sleep 5
 
+      - name: Test backend
+        run: yarn yt:backend test --runInBand --forceExit --ci
+
+      - name: Stop pm2
+        run: yarn pm2 stop all
