fix(yt:shared): defined metadata filters based on nature type

--- a/platforms/storybook/tsconfig.json
+++ b/platforms/storybook/tsconfig.json
@@ -22,9 +22,7 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "paths": {
-      "@shared/*": [
-        "../../../packages/shared/src/*"
-      ]
+      "@shared/*": ["../../../packages/shared/src/*"]
     }
   },
   "references": [
