fix(tk:backend): removed registerEmail2, fixed experiments index

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -6,7 +6,7 @@
     "metadata": "metadata",
     "full": "full",
     "emails": "emails",
-    "experiments": "experiments2"
+    "experiments": "experiments"
   },
 
   "mongoHost": "localhost",
