feat(tk:backend): handle new event "sigiState" in POST /api/v2/events and added GET /api/v2/sigiStates to list them  (#814)

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -7,7 +7,8 @@
     "full": "full",
     "emails": "emails",
     "experiments": "experiments",
-    "apiRequests": "apiRequests"
+    "apiRequests": "apiRequests",
+    "sigiStates": "sigiStates"
   },
 
   "mongoHost": "localhost",
