fix: review mongodb indexes, added 'nature.type', renamed collections, removed email related code (#795)

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -5,8 +5,8 @@
     "htmls": "htmls",
     "metadata": "metadata",
     "full": "full",
-    "emails": "emails2",
-    "experiments": "experiments2"
+    "emails": "emails",
+    "experiments": "experiments"
   },
 
   "mongoHost": "localhost",
