feat(tk): SIGI_STATE and API requests collection (v2.8.0) (#811)
* feat(tk:backend): validate and save contribution events of type 'api'

* feat(tk:backend): defined GET /api/v2/apiEvents api with filters

* feat(tk:backend): handle new event "sigiState" in POST /api/v2/events and added GET /api/v2/sigiStates to list them  (#814)

* feat(tk:ext): intercept api requesta and sigi state (#808)

* feat(guardoni): defined command to download experiment results (#813)

* feat(tk:backend): defined indexes for sigi state mongo collection

--- a/platforms/tktrex/backend/config/settings.json
+++ b/platforms/tktrex/backend/config/settings.json
@@ -6,7 +6,9 @@
     "metadata": "metadata",
     "full": "full",
     "emails": "emails",
-    "experiments": "experiments"
+    "experiments": "experiments",
+    "apiRequests": "apiRequests",
+    "sigiStates": "sigiStates"
   },
 
   "mongoHost": "localhost",
