chore(workspace): remove DEBUG values from backends package.json scripts

--- a/platforms/yttrex/backend/package.json
+++ b/platforms/yttrex/backend/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "clean": "rm -rf ./build",
     "build": "tsc -b tsconfig.build.json",
-    "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-follow-redirects\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:*,-follow-redirects\" node build/bin/server",
-    "parserv": "DEBUG=\"*,-@trex:htmls:debug,-pubtimeAPI\" node build/bin/parser",
-    "parserv:watch": "DEBUG=\"*,-@trex:htmls:debug\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser",
-    "leaveserv": "DEBUG=\"*\" node build/bin/leaves-parser.js",
-    "leaveserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
+    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
+    "start": "node build/bin/server",
+    "parserv": "node build/bin/parser",
+    "parserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/parser",
+    "leaveserv": "node build/bin/leaves-parser.js",
+    "leaveserv:watch": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/leaves-parser.ts",
     "test": "jest",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed",
     "type-check": "tsc",
