--- a/platforms/tktrex/backend/package.json
+++ b/platforms/tktrex/backend/package.json
@@ -7,10 +7,10 @@
     "lint": "eslint ./bin ./lib ./models ./test",
     "test": "jest",
     "coc": "DEBUG=* ts-node bin/count-o-clock.js",
-    "watch": "key=fuffa DEBUG=\"*,-express:*,-body-parser:*,-send\" ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
-    "start": "DEBUG=\"*,-body-parser:*,-express:*,-lib:cache,-send\" node build/bin/server",
-    "parserv:watch": "DEBUG=\"*\" ts-node-dev -r tsconfig-paths/register bin/parser",
-    "parserv": "DEBUG=\"*,-@trex:htmls:debug\" node build/bin/parser",
+    "watch": "key=fuffa ts-node-dev -r tsconfig-paths/register --respawn --transpile-only bin/server",
+    "start": "nodemon build/bin/server",
+    "parserv:watch": "ts-node-dev -r tsconfig-paths/register bin/parser",
+    "parserv": "nodemon build/bin/parser",
     "build": "tsc -b tsconfig.build.json",
     "clean-test-db": "DEBUG=\"tk:*\" ts-node ./scripts/clean-test-db.ts"
   },
