build(workspace): set 'transpileOnly' mode for ts-loader with 'BUILD_TRNASPILE_ONLY' env var

--- a/.github/workflows/tk_pull_request.yml
+++ b/.github/workflows/tk_pull_request.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Build Backend
         run: yarn tk:backend build
 
+      - name: Type Check
+        run: yarn tk:ext tsc -b
+
       - name: Build
         run: yarn tk:ext build
 
