--- a/platforms/tktrex/extension/.env.development
+++ b/platforms/tktrex/extension/.env.development
@@ -1,5 +1,6 @@
 NODE_ENV=development
 BUNDLE_TARGET=firefox
+BUILD_TRANSPILE_ONLY=true
 API_ROOT=http://localhost:14000/api
 WEB_ROOT=http://localhost:1313
 DATA_CONTRIBUTION_ENABLED=true
