--- a/platforms/ycai/studio/.env.beta
+++ b/platforms/ycai/studio/.env.beta
@@ -1,6 +1,7 @@
 # bundle env
 BUNDLE_ENABLE_NOTIFY=false
 BUNDLE_TARGET=chrome
+BUILD_TRANSPILE_ONLY=true
 
 # app env
 PUBLIC_URL=https://beta.studio.youchoose.ai
