--- a/platforms/ycai/studio/.env.development
+++ b/platforms/ycai/studio/.env.development
@@ -1,6 +1,7 @@
 # bundle env
 BUNDLE_TARGET=chrome
 BUNDLE_ENABLE_NOTIFY=false
+BUILD_TRANSPILE_ONLY=true
 
 # app env
 PUBLIC_URL=http://localhost:3000
