--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,7 +3,7 @@ blank_issues_enabled: true
 contact_links:
     - name: 📃 Documentation
       url: https://docs.tracking.exposed
-      about: Please report documentation issues in the React Native website repository.
+      about: Try to give a last look at the documentation before opening the issue :)
     - name: 🚀 Discussions and Proposals
       url: https://github.com/tracking-exposed/trex/discussions
       about: Discuss the future of TrEx in the community's discussions and proposals section.
