--- a/.github/workflows/beta_pull_request.yml
+++ b/.github/workflows/beta_pull_request.yml
@@ -40,12 +40,12 @@ jobs:
           DOTENV_CONFIG_PATH: .env.beta
         run: yarn ycai build
 
-      - name: Deploy YCAI Dashboard
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr --delete
-          path: ./YCAI/build/dashboard/
-          remote_path: ~/beta-studio/
-          remote_host: ${{ secrets.YCAI_BETA_DEPLOY_HOST }}
-          remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
-          remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
+      # - name: Deploy YCAI Dashboard
+      #   uses: burnett01/rsync-deployments@5.1
+      #   with:
+      #     switches: -avzr --delete
+      #     path: ./YCAI/build/dashboard/
+      #     remote_path: ~/beta-studio/
+      #     remote_host: ${{ secrets.YCAI_BETA_DEPLOY_HOST }}
+      #     remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
+      #     remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
