--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -47,12 +47,12 @@ jobs:
       - name: Release Version
         run: yarn release-it --no-github.release --release-version
 
-      - name: Deploy YCAI Dashboard
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr --delete
-          path: ./platforms/ycai/studio/build/dashboard/
-          remote_path: ~/staging-studio/
-          remote_host: ${{ secrets.YCAI_DAILY_DEPLOY_HOST }}
-          remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
-          remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
+      # - name: Deploy YCAI Dashboard
+      #   uses: burnett01/rsync-deployments@5.1
+      #   with:
+      #     switches: -avzr --delete
+      #     path: ./platforms/ycai/studio/build/dashboard/
+      #     remote_path: ~/staging-studio/
+      #     remote_host: ${{ secrets.YCAI_DAILY_DEPLOY_HOST }}
+      #     remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
+      #     remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
