--- a/.github/workflows/master_release.yml
+++ b/.github/workflows/master_release.yml
@@ -155,17 +155,17 @@ jobs:
           git config --global user.name "Team - Tracking Exposed"
           yarn release-it --ci
 
-      - name: Build Dashboard
-        env:
-          DOTENV_CONFIG_PATH: .env
-        run: yarn ycai build
+      # - name: Build Dashboard
+      #   env:
+      #     DOTENV_CONFIG_PATH: .env
+      #   run: yarn ycai build
 
-      - name: Deploy YCAI Dashboard
-        uses: burnett01/rsync-deployments@5.1
-        with:
-          switches: -avzr --delete
-          path: ./platforms/ycai/studio/build/dashboard/
-          remote_path: ~/studio-website/
-          remote_host: ${{ secrets.YCAI_DEPLOY_HOST }}
-          remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
-          remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
+      # - name: Deploy YCAI Dashboard
+      #   uses: burnett01/rsync-deployments@5.1
+      #   with:
+      #     switches: -avzr --delete
+      #     path: ./platforms/ycai/studio/build/dashboard/
+      #     remote_path: ~/studio-website/
+      #     remote_host: ${{ secrets.YCAI_DEPLOY_HOST }}
+      #     remote_user: ${{ secrets.YCAI_DEPLOY_USER }}
+      #     remote_key: ${{ secrets.YCAI_DEPLOY_KEY }}
